--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         <td>2015-2017</td>
         <td>Account Executive at Booking.com</td>
       </tr>
+      <tr>
+        <td>2015-2017</td>
+        <td>Part time - project based, Associate at Horwath HTL</td>
+      </tr>
+      <tr>
+        <td>2019-2020</td>
+        <td>Account Manager at Hotelbeds</td>
+      </tr>
+      <tr>
+        <td>2020-2021</td>
+        <td>Area Manager at Voyage Prive</td>
+      </tr>
     </tbody>
   </table>
   <hr>
